correction contraste

--- a/Starting+website/Starting website/style.css
+++ b/Starting+website/Starting website/style.css
@@ -771,7 +771,7 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #aa7257;
+    background-color:#946E51;
 }
 
 .tc-white {
@@ -779,7 +779,7 @@ h4 {
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background:#946E51;
     color: #FFFFFF!important;
 }
 
@@ -797,7 +797,7 @@ h4 {
 }
 
 .ltc-atomic-tangerine {
-    color: #F3976C!important;
+    color:#946E51!important;
 }
 
 .ltc-atomic-tangerine:hover {
